Fixing delete old by using the function that gets the project and index name to filter. Implementing integration tests for crawl, search and remove old.